CMAKE_MINIMUM_REQUIRED(VERSION 2.6)
PROJECT(libdynamixel C)

IF (WITH_TROSSEN)
	SET(TROSSEN_CMD_SUPPORT,1)
ENDIF (WITH_TROSSEN)

ADD_SUBDIRECTORY(src)


IF (WITH_PYTHONSWIG)
	ADD_SUBDIRECTORY(contrib/python-swig)
ENDIF (WITH_PYTHONSWIG)

#TODO: add stand alone target for examples

#ADD_CUSTOM_TARGET(examples SOURCES examples/CMakeLists.txt)
IF (WITH_EXAMPLES)
	ADD_SUBDIRECTORY(examples)
ENDIF (WITH_EXAMPLES)
