CMAKE_MINIMUM_REQUIRED(VERSION 2.6)
PROJECT(examples C)

INCLUDE_DIRECTORIES(${CMAKE_CURRENT_LIST_DIR}/../src)
#ADD_SUBDIRECTORY(../)

ADD_EXECUTABLE(ping ping.c)
TARGET_LINK_LIBRARIES(ping dynamixel)


ADD_EXECUTABLE(search search.c)
TARGET_LINK_LIBRARIES(search dynamixel)

ADD_EXECUTABLE(read_data search.c)
TARGET_LINK_LIBRARIES(read_data dynamixel)

