CMAKE_MINIMUM_REQUIRED(VERSION 2.6)
PROJECT(LIBDYNAMIXEL)

SET(LIBDYNAMIXEL_VERSION_MAJOR 1)
SET(LIBDYNAMIXEL_VERSION_MINOR 1)
SET(LIBDYNAMIXEL_VERSION_MICRO 0)

INCLUDE (CheckIncludeFiles)
CHECK_INCLUDE_FILES("sys/ioctl.h" HAVE_TIOCSRS485)
CHECK_INCLUDE_FILES("sys/ioctl.h" HAVE_TIOCM_RTS)

INCLUDE (CheckSymbolExists)
CHECK_SYMBOL_EXISTS(B200000 "termios.h" HAVE_BAUDRATE_200000)
CHECK_SYMBOL_EXISTS(B250000 "termios.h" HAVE_BAUDRATE_250000)
CHECK_SYMBOL_EXISTS(B400000 "termios.h" HAVE_BAUDRATE_400000)
CHECK_SYMBOL_EXISTS(B500000 "termios.h" HAVE_BAUDRATE_500000)
CHECK_SYMBOL_EXISTS(B1000000 "termios.h" HAVE_BAUDRATE_1000000)

CONFIGURE_FILE(${CMAKE_CURRENT_SOURCE_DIR}/dynamixel_config.h.in ${CMAKE_CURRENT_BINARY_DIR}/dynamixel_config.h)

SET(CMAKE_C_FLAGS "-I -g -Wall")
INCLUDE_DIRECTORIES(${CMAKE_CURRENT_BINARY_DIR}) # for generated config.h

MESSAGE(STATUS "libdynamixel C_FLAGS: ${CMAKE_C_FLAGS}")

ADD_LIBRARY(dynamixel dynamixel.c dynamixel-rtu.c)

IF (WITH_SHARED)
	ADD_LIBRARY(dynamixel_shared SHARED dynamixel.c dynamixel-rtu.c)
ENDIF(WITH_SHARED)


INSTALL (FILES dynamixel.h  ${CMAKE_CURRENT_BINARY_DIR}/dynamixel-version.h ${CMAKE_CURRENT_BINARY_DIR}/dynamixel_config.h
	DESTINATION include
)
INSTALL (TARGETS dynamixel
	LIBRARY DESTINATION lib
	ARCHIVE DESTINATION lib
)

IF (WITH_SHARED)
	INSTALL (TARGETS dynamixel_shared
		LIBRARY DESTINATION lib
		ARCHIVE DESTINATION lib
	)
ENDIF (WITH_SHARED)


