CMAKE_MINIMUM_REQUIRED(VERSION 2.6)

FIND_PACKAGE(SWIG REQUIRED)
INCLUDE(${SWIG_USE_FILE})

SET(LIBDYNAMIXEL_DIR "../../src")

FIND_PACKAGE(PythonLibs)
INCLUDE_DIRECTORIES(${PYTHON_INCLUDE_PATH})

INCLUDE_DIRECTORIES(${LIBDYNAMIXEL_DIR})

SET(CMAKE_SWIG_FLAGS "-ignoremissing")

#TODO: fix library path
#SET(CMAKE_LIBRARY_PATH "${CMAKE_LIBRARY_PATH} ${LIBDYNAMIXEL_DIR}")

SET_SOURCE_FILES_PROPERTIES(dynamixel.i PROPERTIES SWIG_FLAGS "-includeall")
SWIG_ADD_MODULE(dynamixel python dynamixel.i ${LIBDYNAMIXEL_DIR}/dynamixel.c)
SWIG_LINK_LIBRARIES(dynamixel dynamixel_shared ${PYTHON_LIBRARIES})

